tests/dataset/tpc-ds/compiler/pl/q55.error
run: exit status 2
[ {"brand_id":20, "ext_price":0},  {"brand_id":10, "ext_price":0} ]
ERROR: /tmp/q55.pl:58: user:main Unknown message: error('expect failed')
