tests/dataset/tpc-ds/compiler/pl/q55.pl
% Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z
:- style_check(-singleton).
get_item(Container, Key, Val) :-
    is_dict(Container), !, (string(Key) -> atom_string(A, Key) ; A = Key), get_dict(A, Container, Val).
get_item(Container, Index, Val) :-
    string(Container), !, string_chars(Container, Chars), nth0(Index, Chars, Val).
get_item(List, Index, Val) :- nth0(Index, List, Val).

to_list(Str, L) :-
    string(Str), !,
    string_chars(Str, L).
to_list(L, L).

count(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), length(Items, R).
count(V, R) :-
    string(V), !, string_chars(V, C), length(C, R).
count(V, R) :-
    is_list(V), !, length(V, R).
count(_, _) :- throw(error('count expects list or group')).

avg(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), avg_list(Items, R).
avg(V, R) :-
    is_list(V), !, avg_list(V, R).
avg(_, _) :- throw(error('avg expects list or group')).
avg_list([], 0).
avg_list(L, R) :- sum_list(L, S), length(L, N), N > 0, R is S / N.

sum(V, R) :-
    is_dict(V), !, get_dict('Items', V, Items), sum_list(Items, R).
sum(V, R) :-
    is_list(V), !, sum_list(V, R).
sum(_, _) :- throw(error('sum expects list or group')).

group_insert(Key, Item, [], [_{key:Key, 'Items':[Item]}]).
group_insert(Key, Item, [G|Gs], [NG|Gs]) :- get_dict(key, G, Key), !, get_dict('Items', G, Items), append(Items, [Item], NItems), put_dict('Items', G, NItems, NG).
group_insert(Key, Item, [G|Gs], [G|Rs]) :- group_insert(Key, Item, Gs, Rs).
group_pairs([], Acc, Res) :- reverse(Acc, Res).
group_pairs([K-V|T], Acc, Res) :- group_insert(K, V, Acc, Acc1), group_pairs(T, Acc1, Res).
group_by(List, Fn, Groups) :- findall(K-V, (member(V, List), call(Fn, V, K)), Pairs), group_pairs(Pairs, [], Groups).

:- use_module(library(http/json)).
load_data(Path, Opts, Rows) :-
    (is_dict(Opts), get_dict(format, Opts, Fmt) -> true ; Fmt = 'json'),
    (Path == '' ; Path == '-' -> read_string(user_input, _, Text) ; read_file_to_string(Path, Text, [])),
    (Fmt == 'jsonl' ->
        split_string(Text, '\n', ' \t\r', Lines0),
        exclude(=(''), Lines0, Lines),
        findall(D, (member(L, Lines), open_string(L, S), json_read_dict(S, D), close(S)), Rows)
    ;
        open_string(Text, S), json_read_dict(S, Data), close(S),
        (is_list(Data) -> Rows = Data ; Rows = [Data])
    ).

expect(Cond) :- (Cond -> true ; throw(error('expect failed'))).

:- initialization(main, main).
main :-
    dict_create(_V0, map, [item-1, sold_date-1, price-10]),
    dict_create(_V1, map, [item-2, sold_date-1, price-20]),
    dict_create(_V2, map, [item-3, sold_date-1, price-25]),
    Store_sales = [_V0, _V1, _V2],
    dict_create(_V3, map, [i_item_sk-1, i_brand_id-10, i_manager_id-1]),
    dict_create(_V4, map, [i_item_sk-2, i_brand_id-20, i_manager_id-1]),
    dict_create(_V5, map, [i_item_sk-3, i_brand_id-10, i_manager_id-1]),
    Item = [_V3, _V4, _V5],
    dict_create(_V6, map, [d_date_sk-1, d_year-2001, d_moy-11]),
    Date_dim = [_V6],
    findall(_V16, (member(Ss, Store_sales), member(I, Item), get_item(Ss, 'item', _V7), get_item(I, 'i_item_sk', _V8), get_item(I, 'i_manager_id', _V9), ((_V7 == _V8), (_V9 == 1)), member(D, Date_dim), get_item(Ss, 'sold_date', _V10), get_item(D, 'd_date_sk', _V11), (_V10 == _V11), true, get_item(I, 'i_brand_id', _V12), dict_create(_V13, map, [brand_id-_V12]), _V14 = _V13, dict_create(_V15, map, ['Ss'-Ss, 'I'-I, 'D'-D]), _V16 = _V14-_V15), _V17),
    group_pairs(_V17, [], _V18),
    findall(_V26, (member(G, _V18), get_item(G, 'key', _V19), get_item(_V19, 'brand_id', _V20), findall(_V22, (member(X, G), true, get_item(X, 'price', _V21), _V22 = _V21), _V23), sum(_V23, _V24), dict_create(_V25, map, [brand_id-_V20, ext_price-_V24]), _V26 = _V25), _V27),
    Grouped = _V27,
    findall(_V28, (member(G, Grouped), true, _V28 = G), _V29),
    Result = _V29,
    json_write_dict(current_output, Result), nl,
    true,
    dict_create(_V30, map, [brand_id-10, ext_price-35]),
    dict_create(_V31, map, [brand_id-20, ext_price-20]),
    expect((Result == [_V30, _V31])),
    true.
